--- a/index.html
+++ b/index.html
@@ -1,57 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lucas,My virtual assistant</title>
-  <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <img src="logo.jpg" alt="logo" id="logo">
-    <h1>I'm <span id="name">lucas</span>,Your <span id="va">Virtual Assistant</span></h1>
-    <img src="voice.gif" alt="voice" id="voice">
-    <button id="btn"><img src="mic.svg" alt="mic"><span id="content"> Click here for talk to me</span> </button>
-
-    <script src="script.js"></script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Bar</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Lucas | AI Assistant</title>
+  <!-- Fonts: Cinzel for Classical, Inter for Modern -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
-  <div class="search-container" style="color: white;">
-    <input type="text" id="search-bar" class="search-bar" placeholder="Search..." style="color: white;">
-    <button id="search-btn" class="search-btn" onclick="window.open('https://www.bing.com/search?q=' + document.getElementById('search-bar').value)">
-      &#128269;
-    </button>
-    
-    </div>
-    <div class="search-results"></div>
-    <ul id="search-results-list"></ul>
+  <div class="glass-container">
+    <header>
+      <div class="logo-area">
+        <img src="logo.png" alt="Lucas AI" class="logo-img">
+      </div>
+      <h1>I'm <span class="highlight-classical">Lucas</span></h1>
+      <p class="subtitle">Your <span class="highlight-modern">Virtual Assistant</span></p>
+    </header>
+
+    <main>
+      <div class="visualizer-container">
+        <!-- keeping the gif but styled, or we could use css animations -->
+        <img src="voice.gif" alt="Voice Visualizer" id="voice" class="voice-orb">
+        <div class="orb-pulse"></div>
+      </div>
+
+      <div class="interaction-area">
+        <button id="btn" class="speak-btn">
+          <img src="mic.svg" alt="Microphone" class="mic-icon">
+          <span id="content">Tap to Speak</span>
+        </button>
+      </div>
+    </main>
+
+    <footer>
+      <p>&copy; Developed by Nandha</p>
+    </footer>
+  </div>
+
   <script src="script.js"></script>
-  <script src="https://www.google.co.in/webhp"></script>
-<nav style="position: absolute; top: 10px; right: 10px;">
-  <ul style="list-style-type: none; margin: 0; padding: 0;">
-    <li style="display: inline; margin-right: 10px;"><a href="#home" style="text-decoration: none; color: white;">Home</a></li>
-    <li style="display: inline; margin-right: 10px;"><a href="#about" style="text-decoration: none; color: white;">About</a></li>
-    <li style="display: inline; margin-right: 10px;"><a href="#contact" style="text-decoration: none; color: white;">Contact</a></li>
-    <li style="display: inline; margin-right: 10px;"><a href="#services" style="text-decoration: none; color: white;">services</a></li>
-  </ul>
-</nav>
-</script>
-
 </body>
+
 </html>
-
-
-
