--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 
 <body>
   <div class="glass-container">
+    <div id="welcome-overlay" class="welcome-overlay">
+      <div class="logo-area">
+        <img src="logo.png" alt="Lucas AI" class="logo-img" style="width: 120px; height: 120px;">
+      </div>
+      <h2 class="welcome-text">Welcome to <span class="highlight-classical">Lucas</span></h2>
+      <p style="color: var(--text-secondary); margin-bottom: 2rem;">Experience the future of voice assistants.</p>
+      <button id="signup-btn" class="signup-btn">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub"
+          class="github-icon">
+        Sign up with GitHub to start
+      </button>
+    </div>
     <header>
       <div class="logo-area">
         <img src="logo.png" alt="Lucas AI" class="logo-img">
